--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -12,8 +12,9 @@
 <body>
     <header>
         <h1>Cool Pics 📷</h1>
+        <button id="menu-button">Menu</button>
         <nav id="navbar">
-            <ul>
+            <ul id="menu" class="hide">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">People</a></li>
                 <li><a href="#">Places</a></li>
@@ -60,5 +61,6 @@
     <footer>
         <p>©2023 Not a real site 😀</p>
     </footer>
+    <dialog id="image-viewer"></dialog>
 </body>
 </html>
