--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <h1>Cool Pics 📷</h1>
-        <button id="menu-button">Menu</button>
+        <div class="menu-container">
+            <button id="menu-button">Menu</button>
+        </div>
         <nav id="navbar">
             <ul id="menu" class="hide">
                 <li><a href="#">Home</a></li>
