--- a/character-card/index.html
+++ b/character-card/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Discover Snortleblat, the Swamp Beast Diplomat. Track level, health, and more in this interactive character card." />
   <meta property="og:image" content="https://andejuli.github.io/wdd131/character_card/snortleblat.webp" />
-  <meta property="og:url" content="https://yourwebsite.com/index.html" />
+  <meta property="og:url" content="https://jacob-ham99.github.io/WDD131/character-card/" />
 
 </head>
 <body>
